spec/task5/03_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-5-svc
  namespace: task-5
spec:
  selector:
    app: testapp-5
    type: go-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
