spec/task5/21_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-5-route
  namespace: task-5
spec:
  parentRefs:
    - name: main-gw
      namespace: basic-gw 
  hostnames:
    - testapp5.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: testapp-5-svc
          port: 8081
